Mon Apr 18 13:18:56 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* dbxread.c (read_dbx_dynamic_symtab):  Relocate BFD symbols by
	section vma. Do not read dynamic relocs for sun3 executables to
	avoid BFD assertion message.

Mon Apr 18 10:08:07 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* nm-hppab.h (KERNEL_U_ADDR): Define.
	(FIVE_ARG_PTRACE): Likewise.
	(CANNOT_STORE_REGISTER): Likewise.
	* nm-hppah.h (KERNEL_U_ADDR): Define.
	(FIVE_ARG_PTRACE): Likewise.
	(CANNOT_STORE_REGISTER): Likewise.
	(NEED_TEXT_START_END): Likewise.

	* tm-hppah.h (NEED_TEXT_START_END): Delete definition.
	* xm-hppah.h (KERNEL_U_ADDR): Delete definition.
	(FIVE_ARG_PTRACE): Likewise.
	* xm-hppab.h (KERNEL_U_ADDR): Delete definition.
	(FIVE_ARG_PTRACE): Likewise.

	* hppa-tdep.c (read_unwind_info): Make static.
	(restore_pc_queue): Indirect through the target vector to
	reload the register state.

Sat Apr 16 22:20:51 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* paread.c (compare_unwind_entries): Delete function.  It's been
	moved into hppa-tdep.c.
	(read_unwind_info): Likewise.
	(pa_symfile_read): No longer call read_unwind_info.  The unwind
	tables will be read in as they are needed.

	* hppa-tdep.c (compare_unwind_entries): New function.
	(read_unwind_info, internalize_unwinds): Likewise.
	(find_unwind_entry): Read in unwind information on demand.

Fri Apr 15 11:53:46 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* source.c (DIRNAME_SEPARATOR): New macro, replaces all references
	to : in search path processing.
	* defs.h (qsort): Rename argument in prototype.
	* symtab.h (SAYMBOL_VALUE): Rename value field, avoids bugs in
	some compilers.
	* breakpoint.c, exec.c, mdebugread.c, mipsread.c, xcoffexec.c
	(false): Eliminate usages.

Fri Apr 15 11:35:19 1994  Steve Chamberlain  (sac@cygnus.com)

	* h8500-tdep.c (initialize_h8500_tdep, large_command):
	All references to value changed to value_ptrlage_command is now
	called big_command.