@@ -1,3 +1,8 @@
+Tue Apr 19 09:46:05 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)
+
+	* hppa-tdep.c (internalize_unwind_info): Delete unused indexp
+	argument.
+
 Mon Apr 18 13:18:56 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)
 
 	* dbxread.c (read_dbx_dynamic_symtab):  Relocate BFD symbols by
